--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
 
     <main>
-        <div class="main__container display__none">
+        <div class="main__container not__active">
             <div class="menu__settings">
                 <button class="settings__btn"><img src="img/gear.svg" alt="" class="img__settings"></button>
                 <div class="menu__settings_main">
@@ -51,14 +51,14 @@
             </div>
         </div>
 
-        <div class="menu__pause">
+        <div class="menu__pause not__active">
             <div class="main__container">
                     <div class="menu__settings">
                         <button class="settings__btn"><img src="img/gear.svg" alt="" class="img__settings"></button>
                         <div class="menu__settings_main">
-                            <button class="settings__closed">Mode jour</button>
-                            <button class="settings__closed">Mode sombre</button>
-                            <button class="settings__closed"><img src="img/github.svg" alt=""></button>
+                            <button class="settings__closed settings__buttons bitch">Mode jour</button>
+                            <button class="settings__closed settings__buttons">Mode sombre</button>
+                            <button class="settings__closed settings__buttons"><img src="img/github.svg" alt=""></button>
                         </div>
                     </div>
                     <div class="menu__title">
@@ -72,7 +72,7 @@
                             Recommencer
                         </div>
                         <div class="pause__home pause__style-button">
-                            Retour à l'accueil
+                                Retour à l'accueil
                         </div>
                     </div>
                 </div>
